--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@ body{
     font-size: 15px;
     font-family: Lato, sans-serif;
 }
+
+#container{
+    height: 525px;
+    width: 360px;
+    margin: 100px auto;
+    background-color: #f7f7f7;
+    box-shadow: 5px 5px 5px gray;
+}
