--- a/style.css
+++ b/style.css
@@ -17,5 +17,18 @@ body{
     width: 360px;
     margin: 100px auto;
     background-color: #f7f7f7;
-    box-shadow: 5px 5px 5px gray;
+    /*box-shadow: 5px 5px 5px black;*/
+    border-radius: 20px;
+}
+
+.title{
+    background-color: var(--tertiary-color);
+    color: black;
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: normal;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    text-align: center;
 }
