--- a/style.css
+++ b/style.css
@@ -27,8 +27,44 @@ body{
     padding: 20px;
     text-transform: uppercase;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: bold;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     text-align: center;
+}
+
+.tipsForm{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.formInput{
+    background-color: white;
+    width: 40px;
+    padding: 5px 5px 5px 8px;
+    border: 1px solid black;
+}
+
+.formInput:focus{
+    border: 3px solid black;    
+}
+
+.formSelected{
+    width: 180px;
+    padding: 5px;
+    font-size: 12px;
+}
+
+.formSubmit{
+    text-transform: uppercase;
+    font-weight: bold;
+    display: block;
+    margin: 30px auto;
+    background-color: lightcoral;
+    border-radius: 5px;
+    border: 1px solid black;
+    width: 200px;
+    padding: 15px;
+    font-size: 15px;
+    color: black;
 }
